<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Farmacy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string> 
    
    <string name="gen_ok">Aceptar</string>
    <string name="gen_cancel">Cancelar</string>   
    <string name="gen_male">Hombre</string>
    <string name="gen_female">Mujer</string>
    <string name="gen_search">Buscar</string>
    <string name="gen_save">Guardar</string>
     
    <string name="home_txtWelcome">Bienvenido</string>
    
    <string name="navDrw_Profile">Perfiles</string>
    <string name="navDrw_File">Historial</string>
    <string name="navDrw_Medication">Tratamientos</string>
    <string name="navDrw_Drugstores">Farmacias</string>
    <string name="navDrw_Configuration">Configuración</string>
    <string name="navDrw_Home">Inicio</string>
    <string name="navDrw_About">Acerca de</string>
    
    <string name="conf_lang">Idioma</string>
    <string name="conf_lang_dialog">Elige el idioma de la aplicación</string>
    <string name="conf_noti">Notificaciones</string>
    <string name="conf_gps">GPS</string>
    <string name="conf_gps_summary">Permitir a la aplicación consultar mi hubicación vía gps</string>
    <string name="conf_theme">Tema</string>
    <string name="conf_theme_summary">Tema</string>
    <string name="conf_theme_dialog">Elige un tema para la aplicación</string>
    <string name="conf_noti_summary">Activa o desactiva las notificaciones recordatorias</string>
    <string name="conf_langSpanish">Español</string>
    <string name="conf_langEnglish">Inglés</string>
    <string name="conf_langFrench">Francés</string>
    <string name="conf_theme_pink">Spring pink</string>
    <string name="conf_theme_blue">Beach blue</string>
    <string name="conf_theme_black">Dark Black</string>
    <string name="conf_theme_red">Fire red</string>
    <string name="conf_sync">Sincronización</string>
    <string name="conf_sync_desc">esta opción te permite guardar un respaldo en la nube. Solo necesitas un usuario y contraseña para el acceso.</string>
    <string name="conf_sync_button">Sincronizar ahora</string>
    <string name="conf_sync_user">Usuario</string>
    <string name="conf_sync_password">Contraseña</string>
    <string name="conf_sync_store_credentials">Recordarme</string>
    
    <string name="prof_name">Nombre</string>
    <string name="prof_age">Edad</string>
    
    <string name="med_medications">Tratamientos</string>   
    <string name="med_medicine">Medicinas</string>   
    <string name="med_active">Activos</string>
    <string name="med_active_hint">Nombre del activo</string>
    
    <string name="med_madd">Medicina</string>
    <string name="med_mtype">Presentación</string>
    <string name="med_actives">Activo(s)</string>    
    <string name="med_indication">Indicación terapéutica</string>
    <string name="med_indication_hint">Escriba la indicacíon de su médico aquí</string>
    
    <string name="hist_historial">Historial médico</string>
    <string name="hist_added">Añadido</string>
    <string name="hist_medication">Tratamientos</string>
    <string name="hist_medicine">Medicinas</string>
    <string name="hist_hist_show">Mostrar historial</string>
    <string name="hist_hist_hide">Ocultar historial</string>
    <string name="hist_record">Registro de la aplicación</string>
    <string name="hist_users">Usuarios</string>
    <string name="hist_medication_finished">Tratamientos concluidos</string>
    
    <string name="medi_medication">Tratamiento</string>
    <string name="medi_user">Paciente</string>
    <string name="medi_start_date">Fecha inicio</string>
    <string name="medi_start_time">Hora inicio</string>
    <string name="medi_frecuency">Frecuencia</string>
    <string name="medi_duration">Duración</string>
    <string name="medi_medicine">Medicinas</string>    

  
    
    
</resources>
