<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp" >

        <TextView
            android:id="@+id/lblLang"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/conf_lang"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spnLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <TextView
            android:id="@+id/lblTheme"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/conf_theme"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spnTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/chkNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/conf_noti_summary"
        android:text="@string/conf_noti" />

    <CheckBox
        android:id="@+id/chkGps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/conf_gps_summary"
        android:text="@string/conf_gps" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/gen_ok" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblSyncLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_sync"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblSyncDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_sync_desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnSync"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/conf_sync_button" />

</LinearLayout>
