<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/profilelblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/profiletxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/profilelblAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_age"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/profiletxtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/profilerdoMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:checked="true"
            android:text="@string/gen_male" />

        <RadioButton
            android:id="@+id/profilerdoFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/gen_female" />

    </RadioGroup>

    <Button
        android:id="@+id/profilebtnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gen_ok" />

</LinearLayout>
