<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblMedicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/med_madd" />

    <EditText
        android:id="@+id/txtMedicineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblPackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/med_mtype" />

    <Spinner
        android:id="@+id/spnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblActives"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight=".50"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/med_active"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAddActive"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.00"
            android:drawableRight="@drawable/ic_action_new" />

    </LinearLayout>

    <ListView
        android:id="@+id/listActivesAdded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/gen_save" />

</LinearLayout>
